fix: fix buttons gap in list view

--- a/src/App/components/homepage/ProductCard.module.scss
+++ b/src/App/components/homepage/ProductCard.module.scss
@@ -119,6 +119,7 @@ a {
 
 .card__buttons_list {
   display: flex;
+  gap: 10px;
   flex-direction: column;
 }
 
